@@ -2,10 +2,22 @@ package org.amshove.natls.progress;
 
 public class StdOutProgressMonitor implements IProgressMonitor
 {
+	private int previousMessageLength;
+
 	@Override
 	public void progress(String message, int percentage)
 	{
-		System.out.printf("\r[%s%%] %s", String.format("%3d", percentage), message);
+		var theMessage = "\r[%3d%%] %s".formatted(percentage, message);
+
+		System.out.print("\r" + " ".repeat(previousMessageLength + 1));
+		System.out.print(theMessage);
+
+		previousMessageLength = theMessage.length();
+
+		if(percentage == 100)
+		{
+			System.out.println();
+		}
 	}
 
 	@Override
